# hroq

./: .ghci  .gitignore  Makefile  NOTES.md  README.md  REPOS  TODO.org  build_for_prof.sh  hroq.cabal  hroq.leak.ps  leak.hs  main.hs  run_prof.sh
src/Data/: .ghci  Hroq.hs  HroqAlarmServer.hs  HroqApp.hs  HroqConsumer.hs  HroqConsumerTH.hs  HroqDlqWorkers.hs  HroqGroups.hs  HroqHandlePool.hs  HroqLogDumper.hs  HroqLogger.hs  HroqMnesia.hs  HroqQueue.hs  HroqQueueMeta.hs  HroqQueueWatch.hs  HroqQueueWatchServer.hs  HroqSampleWorker.hs  HroqStatsGatherer.hs  HroqSup.hs  HroqUtil.hs
src/Data/Concurrent/Queue/Roq/: AlarmServer.hs  App.hs  Consumer.hs  ConsumerTH.hs  DlqWorkers.hs  Groups.hs  HandlePool.hs  Hroq.hs  LogDumper.hs  Logger.hs  Mnesia.hs  Queue.hs  QueueMeta.hs  QueueWatch.hs  QueueWatchServer.hs  SampleWorker.hs  StatsGatherer.hs  Sup.hs  Util.hs
tests/: TestAlarmServer.hs  TestStatsGatherer.hs  TestUtils.hs
