name:                hroq
version:             0.1.0.0
synopsis:            Persistent Q, where only the head block and tail block are in RAM, 
                     so it can grow as big as the disk
-- description:         
homepage:            https://github.com/alanz/hroq
license:             BSD3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
cabal-version:       >=1.8


-- library
--   exposed-modules:    Data.Hroq 
--   -- other-modules:       
--   hs-source-dirs: . ./src
--   ghc-options:
--     -threaded
--     -with-rtsopts=-T
--     -- -fhpc
--   build-depends:       base ==4.5.*
--                      , RefSerialize
--                      , binary
--                      , bytestring
--                      , containers
--                      , network-transport-tcp
--                      , derive
--                      , distributed-process-platform
--                      , distributed-process
--                      , time
--                      , hslogger
--                      , old-locale
--                      , ekg

executable hroq
  main-is:             main.hs
  -- main-is:             leak.hs
  Hs-Source-Dirs:      . src
  ghc-options:
    -- The -threaded and -with-rtsopts=-T are needed for EKG
    -threaded
    -with-rtsopts=-T
    -- -rtsopts=all
    -- -prof -auto
    -- -fhpc
  -- other-modules:       
  build-depends:       base ==4.5.*
                       , RefSerialize
                       , distributed-process
                       , distributed-process-platform
                       , distributed-process-simplelocalnet
                       , distributed-static
                       , binary
                       , bytestring
                       , containers
                       , derive
                       , directory
                       , ghc-prim
                       , network-transport-tcp
                       , random
                       , ekg
                       , HTTP
                       , snap-core
                       , time
                       , hslogger
                       , old-locale


source-repository head
    type: git
    location: https://github.com/alanz/hroq

